--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@rbxts/signal": "^1.1.1",
     "@rbxts/t": "^3.2.1",
     "@rbxts/trove": "^1.3.0",
-    "@rbxts/validate-tree": "^2.0.2"
+    "@rbxts/validate-tree": "^2.0.2",
+    "eslint": "^9.39.2"
   }
 }
